新增了日志打印相关函数

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,3 +6,14 @@
 ListenPort = 5678
 
 DBInfo = 127.0.0.1;1234;myr;123456;mxdb_g
+
+
+# 日志相关
+[Log]
+# 日志文件输出目录和文件名
+Log = logs/error.log
+# Log = error.log
+
+# 只打印等级<= 数字的日志到文件中，0级别最高，8最低
+LogLevel = 8
+
