创建socket类，并完成了初始化函数，包括创建sock, 绑定和listen

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,6 @@
 
 # [开头的表示组信息，也等价于注释行
 [Socket]
-ListenPort = 5678
-
 DBInfo = 127.0.0.1;1234;myr;123456;mxdb_g
 
 
@@ -23,4 +21,11 @@ WorkerProcesses = 2
 
 # 是否按照守护进程方式运行
 Daemon = 1
+
+
+# 和网络相关
+[Net]
+ListenPortCount = 2
+ListenPort0 = 80
+ListenPort1 = 443
 
