添加了处理逻辑相关的类声明，还没有实现

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,10 +17,13 @@ LogLevel = 8
 
 # 进程相关
 [Proc]
-WorkerProcesses = 2
+WorkerProcesses = 1
 
 # 是否按照守护进程方式运行
 Daemon = 1
+
+# 处理线程池中线程的数量
+ProcMsgRecvWorkThreadCount = 1
 
 
 # 和网络相关
