改动部分较大，一个消息处理结束后，会等待一定时间后再回收,连接池

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,13 +17,13 @@ LogLevel = 8
 
 # 进程相关
 [Proc]
-WorkerProcesses = 1
+WorkerProcesses = 2
 
 # 是否按照守护进程方式运行
 Daemon = 1
 
 # 处理线程池中线程的数量
-ProcMsgRecvWorkThreadCount = 1
+ProcMsgRecvWorkThreadCount = 4
 
 
 # 和网络相关
@@ -35,4 +35,7 @@ ListenPort1 = 443
 
 #epoll链接的最大数目【每个worker进程允许链接的客户端数目】
 worker_connections = 1024
+
+#Sock_RecyConnectionWaitTime:为确保系统稳定socket关闭后资源不会立即收回，而要等一定的秒数，在这个秒数之后，才进行资源/连接的回收
+Sock_RecyConnectionWaitTime = 80
 
