增加了心跳包相关代码，防止特殊情况连接断开而服务器不知道

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,3 +39,11 @@ worker_connections = 1024
 #Sock_RecyConnectionWaitTime:为确保系统稳定socket关闭后资源不会立即收回，而要等一定的秒数，在这个秒数之后，才进行资源/连接的回收
 Sock_RecyConnectionWaitTime = 80
 
+#是否开启踢人时钟 1:开启 0：不开启
+Sock_WaitTimeEnable = 1
+#多少秒检测一次是否心跳超时
+Sock_MaxWaitTime = 5
+#当时间到达Sock_MaxWaitTime指定时间时，直接把客户端踢出去,否则等待一段时间后再踢
+Sock_TimeOutTick = 0
+
+
