增加了抵御基本的flood攻击代码

--- a/nginx.conf
+++ b/nginx.conf
@@ -42,8 +42,16 @@ Sock_RecyConnectionWaitTime = 80
 #是否开启踢人时钟 1:开启 0：不开启
 Sock_WaitTimeEnable = 1
 #多少秒检测一次是否心跳超时
-Sock_MaxWaitTime = 5
+Sock_MaxWaitTime = 20
 #当时间到达Sock_MaxWaitTime指定时间时，直接把客户端踢出去,否则等待一段时间后再踢
 Sock_TimeOutTick = 0
 
+# 和网络安全相关
+[NetSecurity]
 
+#flood检测 攻击检测是否开启 1：开启，0：关闭
+Sock_FloodAttackKickEnable = 1
+#每次收到数据包的时间间隔是100毫秒
+Sock_FloodTimeInterval = 100
+#连续间隔100毫秒内收到数据包，那么就认为恶意入侵
+Sock_FloodKickCounter = 10
