删除了一些调试信息，修改了一点bug

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,18 +23,18 @@ WorkerProcesses = 1
 Daemon = 1
 
 # 处理线程池中线程的数量
-ProcMsgRecvWorkThreadCount = 2
+ProcMsgRecvWorkThreadCount = 30
 
 
 # 和网络相关
 [Net]
-ListenPortCount = 2
+ListenPortCount = 1
 ListenPort0 = 80
-ListenPort1 = 443
+#ListenPort1 = 443
 
 
 #epoll链接的最大数目【每个worker进程允许链接的客户端数目】
-worker_connections = 1024
+worker_connections = 2048
 
 #Sock_RecyConnectionWaitTime:为确保系统稳定socket关闭后资源不会立即收回，而要等一定的秒数，在这个秒数之后，才进行资源/连接的回收
 Sock_RecyConnectionWaitTime = 80
